--- a/app/src/main/res/layout/activity_title_screen.xml
+++ b/app/src/main/res/layout/activity_title_screen.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
+    android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
     android:visibility="visible"
     tools:context=".view.TitleScreen">
 
@@ -23,12 +24,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="112dp"
-        android:fontFamily="@font/another_shabby_light"
+        android:fontFamily="@font/black_chancery"
         android:text="Legend's Calling"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="#EC2A1B"
-        android:textSize="53sp"
+        android:textSize="64sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -77,7 +78,8 @@
         android:background="@drawable/gradient_spinner"
         android:dropDownSelector="@android:drawable/ic_menu_more"
         android:fontFamily="@font/another_shabby_light"
-        android:popupBackground="#DFFFFFFF"
+        android:popupBackground="@android:drawable/list_selector_background"
+        android:spinnerMode="dialog"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
