--- a/app/src/main/res/layout/activity_game_screen.xml
+++ b/app/src/main/res/layout/activity_game_screen.xml
@@ -21,7 +21,8 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="5"
             android:background="@drawable/border">
 
             <TextView
@@ -30,7 +31,9 @@
                 android:layout_height="match_parent"
                 android:layout_weight="2"
                 android:background="@drawable/border"
+                android:editable="false"
                 android:fontFamily="@font/black_chancery"
+                android:gravity="center"
                 android:text="Hp: 25/25"
                 android:textColor="#38883B"
                 android:textSize="24sp"
@@ -42,22 +45,41 @@
                 android:layout_height="match_parent"
                 android:layout_weight="3"
                 android:background="@drawable/border"
+                android:editable="false"
                 android:fontFamily="@font/black_chancery"
+                android:gravity="center"
                 android:text="+golden armor"
                 android:textAlignment="center"
                 android:textColor="#FFFFFF"
                 android:textSize="24sp"
-                android:visibility="invisible" />
+                android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/goldLabel"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:background="@drawable/border"
+                android:drawableRight="@android:drawable/btn_star_big_on"
+                android:editable="false"
+                android:fontFamily="@font/black_chancery"
+                android:gravity="center|end"
+                android:text="Gold coin: 6"
+                android:textAlignment="center"
+                android:textColor="#FFC107"
+                android:textSize="24sp"
+                android:textStyle="bold" />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_weight="2">
 
             <Spinner
                 android:id="@+id/weaponSpinner"
                 android:layout_width="match_parent"
-                android:layout_height="44dp"
+                android:layout_height="match_parent"
                 android:layout_weight="3"
                 android:background="@drawable/border"
                 android:dropDownSelector="@android:drawable/arrow_down_float"
@@ -78,6 +100,7 @@
                 android:spinnerMode="dropdown"
                 android:textAlignment="center"
                 android:visibility="invisible" />
+
         </TableRow>
 
     </TableLayout>
@@ -96,7 +119,7 @@
             android:id="@+id/gameImageView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_weight="7"
             app:srcCompat="@drawable/goblin_cave" />
 
@@ -105,9 +128,9 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="5dp"
             android:layout_weight="6"
             android:fontFamily="sans-serif"
             android:onClick="finishTexting"
@@ -161,7 +184,7 @@
             android:layout_height="0dp"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="5dp"
             android:layout_weight="1.5"
             android:fontFamily="sans-serif"
             android:onClick="clickButton4"
