--- a/app/src/main/res/layout/activity_game_screen.xml
+++ b/app/src/main/res/layout/activity_game_screen.xml
@@ -21,15 +21,14 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="2"
+            android:layout_height="40dp"
             android:background="@drawable/border">
 
             <TextView
                 android:id="@+id/hpLabel"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="3"
+                android:layout_height="40dp"
+                android:layout_weight="2"
                 android:background="@drawable/border"
                 android:editable="false"
                 android:fontFamily="@font/black_chancery"
@@ -43,8 +42,8 @@
             <TextView
                 android:id="@+id/armorLabel"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_height="40dp"
+                android:layout_weight="4"
                 android:background="@drawable/border"
                 android:editable="false"
                 android:fontFamily="@font/black_chancery"
@@ -57,7 +56,7 @@
             <TextView
                 android:id="@+id/goldLabel"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="40dp"
                 android:layout_weight="3"
                 android:background="@drawable/border"
                 android:editable="false"
@@ -72,13 +71,12 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="3">
+            android:layout_height="40dp">
 
             <Spinner
                 android:id="@+id/weaponSpinner"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="40dp"
                 android:layout_weight="4"
                 android:background="@drawable/border"
                 android:fontFamily="sans-serif"
@@ -90,7 +88,7 @@
             <Spinner
                 android:id="@+id/spellSpinner"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="40dp"
                 android:layout_weight="6"
                 android:background="@drawable/border"
                 android:fontFamily="sans-serif"
