--- a/app/src/main/res/layout/activity_game_screen.xml
+++ b/app/src/main/res/layout/activity_game_screen.xml
@@ -117,7 +117,7 @@
             android:layout_height="0dp"
             android:layout_marginTop="5dp"
             android:layout_weight="7"
-            app:srcCompat="@drawable/goblin_cave" />
+            app:srcCompat="@drawable/dark_screen" />
 
         <TextView
             android:id="@+id/gameTextView"
