--- a/app/src/main/res/layout/activity_title_screen.xml
+++ b/app/src/main/res/layout/activity_title_screen.xml
@@ -8,7 +8,7 @@
     android:background="@drawable/background"
     android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
     android:visibility="visible"
-    tools:context=".view.TitleScreen">
+    tools:context=".controller.activity.TitleScreen">
 
     <ImageView
         android:id="@+id/cloudImageView"
