--- a/app/src/main/res/layout/activity_title_screen.xml
+++ b/app/src/main/res/layout/activity_title_screen.xml
@@ -19,51 +19,53 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/cloud" />
 
+    <ImageView
+        android:id="@+id/titleImageView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="65dp"
+        android:layout_marginBottom="15dp"
+        app:layout_constraintBottom_toTopOf="@+id/difficultySpinner"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
+        app:srcCompat="@drawable/adventurer" />
+
     <TextView
         android:id="@+id/titleTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="105dp"
         android:fontFamily="@font/black_chancery"
-        android:text="Legend's Calling"
+        android:text="The Legend's Calling"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="#EC2A1B"
-        android:textSize="64sp"
+        android:textSize="66sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/titleImageView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="70dp"
-        android:layout_marginEnd="65dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
-        app:srcCompat="@drawable/adventurer" />
-
     <Button
         android:id="@+id/titleButton1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="80dp"
-        android:layout_marginTop="10dp"
         android:layout_marginEnd="80dp"
+        android:layout_marginBottom="15dp"
         android:fontFamily="@font/another_shabby_light"
         android:onClick="toGameScreen1"
         android:text="Start"
         android:textAllCaps="true"
         android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/titleButton2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/difficultySpinner"
         app:strokeColor="#040303" />
 
     <Spinner
@@ -71,32 +73,32 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="10dp"
         android:layout_marginEnd="100dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/gradient_spinner"
         android:dropDownSelector="@android:drawable/ic_menu_more"
         android:fontFamily="@font/another_shabby_light"
         android:popupBackground="@android:drawable/list_selector_background"
         android:spinnerMode="dialog"
+        app:layout_constraintBottom_toTopOf="@+id/titleButton1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleImageView" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/titleButton2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="80dp"
-        android:layout_marginTop="10dp"
         android:layout_marginEnd="80dp"
+        android:layout_marginBottom="40dp"
         android:fontFamily="@font/another_shabby_light"
         android:onClick="toGameScreen2"
         android:text="New Game"
         android:textAllCaps="true"
         android:textSize="24dp"
         android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleButton1" />
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
